@@ -52,6 +52,18 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertNotNull
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|assertTrue
 import|;
 end_import
@@ -206,6 +218,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -309,6 +331,42 @@ operator|.
 name|records
 operator|.
 name|NodeId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|Resource
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ResourceOption
 import|;
 end_import
 
@@ -624,9 +682,63 @@ name|hadoop
 operator|.
 name|yarn
 operator|.
+name|server
+operator|.
+name|api
+operator|.
+name|protocolrecords
+operator|.
+name|UpdateNodeResourceRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|util
+operator|.
+name|ConverterUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
 name|util
 operator|.
 name|Records
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|util
+operator|.
+name|resource
+operator|.
+name|Resources
 import|;
 end_import
 
@@ -647,6 +759,16 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|ArgumentCaptor
 import|;
 end_import
 
@@ -1350,6 +1472,187 @@ name|RefreshServiceAclsRequest
 operator|.
 name|class
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|500
+argument_list|)
+DECL|method|testUpdateNodeResource ()
+specifier|public
+name|void
+name|testUpdateNodeResource
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|nodeIdStr
+init|=
+literal|"0.0.0.0:0"
+decl_stmt|;
+name|int
+name|memSize
+init|=
+literal|2048
+decl_stmt|;
+name|int
+name|cores
+init|=
+literal|2
+decl_stmt|;
+name|String
+index|[]
+name|args
+init|=
+block|{
+literal|"-updateNodeResource"
+block|,
+name|nodeIdStr
+block|,
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|memSize
+argument_list|)
+block|,
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|cores
+argument_list|)
+block|}
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|rmAdminCLI
+operator|.
+name|run
+argument_list|(
+name|args
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ArgumentCaptor
+argument_list|<
+name|UpdateNodeResourceRequest
+argument_list|>
+name|argument
+init|=
+name|ArgumentCaptor
+operator|.
+name|forClass
+argument_list|(
+name|UpdateNodeResourceRequest
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|verify
+argument_list|(
+name|admin
+argument_list|)
+operator|.
+name|updateNodeResource
+argument_list|(
+name|argument
+operator|.
+name|capture
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|UpdateNodeResourceRequest
+name|request
+init|=
+name|argument
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+name|Map
+argument_list|<
+name|NodeId
+argument_list|,
+name|ResourceOption
+argument_list|>
+name|resourceMap
+init|=
+name|request
+operator|.
+name|getNodeResourceMap
+argument_list|()
+decl_stmt|;
+name|NodeId
+name|nodeId
+init|=
+name|ConverterUtils
+operator|.
+name|toNodeId
+argument_list|(
+name|nodeIdStr
+argument_list|)
+decl_stmt|;
+name|Resource
+name|expectedResource
+init|=
+name|Resources
+operator|.
+name|createResource
+argument_list|(
+name|memSize
+argument_list|,
+name|cores
+argument_list|)
+decl_stmt|;
+name|ResourceOption
+name|resource
+init|=
+name|resourceMap
+operator|.
+name|get
+argument_list|(
+name|nodeId
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+literal|"resource for "
+operator|+
+name|nodeIdStr
+operator|+
+literal|" shouldn't be null."
+argument_list|,
+name|resource
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"resource value for "
+operator|+
+name|nodeIdStr
+operator|+
+literal|" is not as expected."
+argument_list|,
+name|ResourceOption
+operator|.
+name|newInstance
+argument_list|(
+name|expectedResource
+argument_list|,
+name|ResourceOption
+operator|.
+name|OVER_COMMIT_TIMEOUT_MILLIS_DEFAULT
+argument_list|)
+argument_list|,
+name|resource
 argument_list|)
 expr_stmt|;
 block|}
